--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css" type="text/css">
+    
     <title>Aaron D'Souza | Portfolio</title>
 </head>
 <body>
@@ -23,7 +24,7 @@
         <section class='aboutme flexabout'>
             <div class='aboutme-text'>
                 <h2>About Me</h2>
-                <p>Hey! I'm Aaron, an aspiring web-developer who currently works in finance. I have been learning to code for INSERT JAVASCRIPT DAYS. </p>
+                <p>Hey! I'm Aaron, an aspiring web-developer who currently works in finance. I have been learning to code for <span id='days-coding'>huh</span> days! </p>
                 <p>My goal is to become a full-stack developer, but also gain data science skills. Basically I want to be a jack of all languages!</p>
                 <br>
                 <p>Why do I want to do this? Well, I have always been entreprenurial at heart, and I want my skills to reflect that. Being able to design my own front end sites, and also fully code a product/service is invaluable. </p>
@@ -67,5 +68,7 @@
         <p> Made by Aaron <span class="heart">☀</span></p>
 
     </footer>
+    
 </body>
+    <script type="text/javascript" src="script.js"></script>
 </html>
