--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </nav>
     </header>
     <main>
-        <section class='aboutme flexabout'>
+        <section class='flexabout' id='aboutme'>
             <div class='aboutme-text'>
                 <h2>About Me</h2>
                 <p>Hey! I'm Aaron, an aspiring web-developer who currently works in finance. I have been learning to code for <span id='days-coding'>huh</span> days! </p>
@@ -32,7 +32,7 @@
             </div>
             <img src='personalpic.jpg' alt='Picture of me'>
         </section>
-        <section class='projects'>
+        <section id='projects'>
             <h2>Projects</h2>
             <div class='swipeable'>
                 <figure>
@@ -51,7 +51,7 @@
                 </figure>
             </div>
         </section>
-        <section class='skills'>
+        <section id='skills'>
             <h2>Skills</h2>
             <div class='flexskills'>
                 <img src="1200px-HTML5_logo_and_wordmark.svg.png" alt="">
