added contact page

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css" type="text/css">
-    
     <title>Aaron D'Souza | Portfolio</title>
 </head>
 <body>
@@ -16,7 +15,7 @@
                 <a href='#aboutme'>About Me</a>
                 <a href='#projects'>Projects</a>
                 <a href='#skills'>Skills</a>
-                <a href='#contact'>Contact</a>
+                <a href='./contact.html'>Contact</a>
             </ul>
         </nav>
     </header>
