--- a/Westlab2.html
+++ b/Westlab2.html
@@ -6,24 +6,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="stylesheet.css" type="text/css">
     <link rel='stylesheet' href = 'picturesstyle.css' type= 'text/css'>
-    <title>Antonio Giralamo|Westlab 2</title>
+    <script type="text/javascript" src="./script.js" defer></script>
+    <title>Antonio Giralamo | Westlab 2</title>
 </head>
 <body>
-    <Header>
-        <nav>
-            <ul>
-                <li><a href='index.html'>Home</a></li>
-                <li><a href='utah.html'>Utah</a></li>
-                <li><a href='BCDR1.html'>BCDR1</a></li>
-                <li><a href='Westlab2.html'>Westlab 2</a></li>
-                <li>The Incident</li>
-                <li>Border</li>
-                <li>About Antonio</li>
-            </ul>
-        </nav>
-        <h1 id="title-1">Photos from Westlab 2</h1>
-        <h1 id="title-2">Shot on 35mm</h1>
-        </header>
+    <header>
+        <div class='hamburger'>
+            <span class='bar newcolor'></span>
+            <span class='bar newcolor'></span>
+            <span class='bar newcolor'></span>
+        </div>
+    <nav class='nav_menu'>
+        <ul>
+            <li><a href='index.html'>Home</a></li>
+            <li><a href='utah.html'>Utah</a></li>
+            <li><a href='BCDR1.html'>BCDR1</a></li>
+            <li><a href='Westlab2.html'>Westlab 2</a></li>
+            <li><a href='incident.html'>The Incident</a></li>
+            <li><a href='border.html'>Border</a></li>
+            <li><a href='graduation.html'>Graduation</a></li>
+            <li><a href='muddled.html'>Muddled</a></li>
+        </ul>
+    </nav>
+    <h1 id="title-1">Antonio Giralamo</h1>
+    <h1 id="title-2">Photos on film</h1>
+
+    </header>
         <main>
             <section class="picturesGrid">
                 
