--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Antonio Giralamo</title>
 </head>
 <body>
-    <Header>
+    <header>
         <div class='hamburger'>
             <span class='bar newcolor'></span>
             <span class='bar newcolor'></span>
@@ -18,12 +18,13 @@
     <nav class='nav_menu'>
         <ul>
             <li><a href='index.html'>Home</a></li>
-                <li><a href='utah.html'>Utah</a></li>
-                <li><a href='BCDR1.html'>BCDR1</a></li>
-                <li><a href='Westlab2.html'>Westlab 2</a></li>
-            <li>The Incident</li>
-            <li>Border</li>
-            <li>About Antonio</li>
+            <li><a href='utah.html'>Utah</a></li>
+            <li><a href='BCDR1.html'>BCDR1</a></li>
+            <li><a href='Westlab2.html'>Westlab 2</a></li>
+            <li><a href='incident.html'>The Incident</a></li>
+            <li><a href='border.html'>Border</a></li>
+            <li><a href='graduation.html'>Graduation</a></li>
+            <li><a href='muddled.html'>Muddled</a></li>
         </ul>
     </nav>
     <h1 id="title-1">Antonio Giralamo</h1>
@@ -32,7 +33,7 @@
     </header>
     <main>
         <h2 class="sectiondivs newcolor">Featured works</h2>
-        <section class="testgrid">
+        <section class="indexgrid">
             <img src="./Photos/Utah/D00000LC6Tuk7pRg/featured.jpg" alt="Great Salt Lake with Mountains" class="featured row_one left">
             <img src="./Photos/Westlab2/00001220/featured BAT.jpg" alt="Garage doors at BAT" class="featured row_2 left">
             <img src="./Photos/BCDR1/D0000GPAKu2nwJ30/Featured brooklyn park.jpg" alt="Skyline of brooklyn bridge park" class="featured row_3 left">
