Added album tiles

--- a/index.html
+++ b/index.html
@@ -86,8 +86,25 @@
                 <p><a href='./BCDR1.html'>BCDR 1</a></p>
             </div>
             <div class='Albumicon'>
-                <img src="./Photos/Westlab2/00001219/icon1.jpg" alt="">
-                <p>WESTLAB 2</p>
+                <a href='Westlab2.html'><img src="./Photos/Westlab2/00001219/icon1.jpg" alt=""></a>
+                <p><a href = 'Westlab2.html'>WESTLAB 2</a></p>
+            </div>
+            <div class='Albumicon'>
+                <a href='incident.html'><img src="./Photos/incident/34.jpg" alt=""></a>
+                <p><a href = 'incident.html'>The Incident</a></p>
+            </div>
+            <div class='Albumicon'>
+                <a href='border.html'><img src="./Photos/Border/1.jpg" alt=""></a>
+                <p><a href = 'border.html'>Border</a></p>
+            </div>
+            <div class='Albumicon'>
+                <a href='graduation.html'><img src="./Photos/Graduation/5.jpg" alt=""></a>
+                <p><a href = 'graduation.html'>Graduation</a></p>
+            </div>
+            <br>    
+            <div class='Albumicon'>
+                <a href='muddled.html'><img src="./Photos/Muddled/7.jpg" alt=""></a>
+                <p><a href = 'muddled.html'>Muddled</a></p>
             </div>
         </section>
     </main>
