--- a/Westlab2.html
+++ b/Westlab2.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="stylesheet.css" type="text/css">
     <link rel='stylesheet' href = 'picturesstyle.css' type= 'text/css'>
+    <link rel="shortcut icon" type="image/jpg" href="camera_1f4f7.png"/>
     <script type="text/javascript" src="./script.js" defer></script>
     <title>Antonio Giralamo | Westlab 2</title>
 </head>
