--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./stylesheet.css" type="text/css">
+    <link rel="shortcut icon" type="image/jpg" href="camera_1f4f7.png"/>
     <script type="text/javascript" src="./script.js" defer></script>
     <title>Antonio Giralamo</title>
 </head>
