--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta name="google-site-verification" content="_FbMgUBoJOnDfbu7iLZc_xTediLWbUligJwV7tzoajg" />
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./stylesheet.css" type="text/css">
     <link rel="shortcut icon" type="image/jpg" href="/camera_1f4f7.png"/>
+    <meta name="google-site-verification" content="_FbMgUBoJOnDfbu7iLZc_xTediLWbUligJwV7tzoajg" />
     <script type="text/javascript" src="./script.js" defer></script>
     <title>Antonio Giralamo</title>
 </head>
@@ -41,31 +41,31 @@
             <img src="./Photos/BCDR1/D0000GPAKu2nwJ30/Featured brooklyn park.jpg" alt="Skyline of brooklyn bridge park" class="featured row_3 left">
             <img src="./Photos/The incident/00001496/featured Brooklyn door.jpg" alt="Grey door with orange light" class="featured row_4 left">
             <img src="./Photos/mexico/featured mexico san miguel.jpg" alt="Double exposure of lamps on broken camera" class="featured row_5 left">
-            <div class='row_one'>
+            <div class='row_one captions'>
                 <h1 class = "lefttitle row_one">Utah</h1>
                 <p class="leftcap row_one">Great Salt Lake</p>
                 <h1 class = "righttitle row_one">Brooklyn</h1>
                 <p class="rightcap row_one">Domino Park</p>
             </div>
-            <div class='row_2'>
+            <div class='row_2 captions'>
                 <h1 class = "lefttitle row_2">Brooklyn</h1>
                 <p class="leftcap row_2">Brooklyn Army Terminal</p>
                 <h1 class = "righttitle row_2">Brooklyn</h1>
                 <p class="rightcap row_2">Williamsburg</p>
             </div>
-            <div class='row_3'>
+            <div class='row_3 captions'>
                 <h1 class = "lefttitle row_3">Brooklyn</h1>
                 <p class="leftcap row_3">Brooklyn Bride Park</p>
                 <h1 class = "righttitle row_3">Brooklyn</h1>
                 <p class="rightcap row_3">Beekman Place</p>
             </div>
-            <div class='row_3'>
+            <div class='row_4 captions'>
                 <h1 class = "lefttitle row_4">Brooklyn</h1>
                 <p class="leftcap row_4">Bushwick</p>
                 <h1 class = "righttitle row_4">Brooklyn</h1>
                 <p class="rightcap row_4">Bushwick</p>
             </div>
-            <div class='row_3'>
+            <div class='row_5 captions'>
                 <h1 class = "lefttitle row_5">Mexico</h1>
                 <p class="leftcap row_5">San Miguel</p>
                 <h1 class = "righttitle row_5">Mexico</h1>
