--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
             <br>
             <p>Please enter your name to continue</p>
             <input type="password" name="human" id="inputName">
+            <input type="submit" value="Submit" id="submitform">
         </form>
     </div>
 </body>
