added meta name tagging

--- a/index.html
+++ b/index.html
@@ -34,6 +34,12 @@
 
     </header>
     <main>
+        <div id="message">
+            <p id="nameadd">I hope you see your reflection in these photos, </p>
+            <p>After all, they are photos of you.</p>
+
+
+        </div>
         <h2 class="sectiondivs newcolor">Featured works</h2>
         <section class="indexgrid">
             <img src="./Photos/Utah/D00000LC6Tuk7pRg/featured.jpg" alt="Great Salt Lake with Mountains" class="featured row_one left">
