bandaid for the null name issue

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </header>
     <main>
         <div id="message">
-            <p id="nameadd">I hope you see your reflection in these photos, </p>
+            <p id="nameadd">I hope you see your reflection in these photos</p>
             <p>After all, they are photos of you.</p>
 
 
