New naming based on user input

--- a/incident.html
+++ b/incident.html
@@ -30,7 +30,7 @@
         </ul>
     </nav>
     <h1 id="title-1">Antonio Giralamo</h1>
-    <h1 id="title-2">Photos on film</h1>
+    <h1 id="title-2">Photos of You</h1>
 
     </header>
     <main>
