--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script type="text/javascript" src="./script.js" defer></script>
     <title>Antonio Giralamo</title>
 </head>
-<body>
+<body id = 'bodytest'>
     <header>
         <div class='hamburger'>
             <span class='bar newcolor'></span>
