--- a/utah.html
+++ b/utah.html
@@ -29,8 +29,8 @@
             <li><a href='muddled.html'>Muddled</a></li>
         </ul>
     </nav>
-    <h1 id="title-1">Antonio Giralamo</h1>
-    <h1 id="title-2">Photos on film</h1>
+    <h1 id="title-1" class = "usersname">Antonio Giralamo</h1>
+    <h1 id="title-2">Photos of You</h1>
 
     </header>
     <main>
