Oime and Roots html

--- a/Westlab2.html
+++ b/Westlab2.html
@@ -27,6 +27,8 @@
             <li><a href='border.html'>Border</a></li>
             <li><a href='graduation.html'>Graduation</a></li>
             <li><a href='muddled.html'>Muddled</a></li>
+            <li><a href='Roots.html'>Roots</a></li>
+            <li><a href='Oime.html'>Oime</a></li>
         </ul>
     </nav>
     <h1 id="title-1">Antonio Giralamo</h1>
