--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
             <li><a href='border.html'>Border</a></li>
             <li><a href='graduation.html'>Graduation</a></li>
             <li><a href='muddled.html'>Muddled</a></li>
+            <li><a href='Roots.html'>Roots</a></li>
+            <li><a href='Oime.html'>Oime</a></li>
         </ul>
     </nav>
     <h1 id="title-1">Antonio Giralamo</h1>
@@ -108,11 +110,18 @@
             <div class='Albumicon'>
                 <a href='graduation.html'><img src="./Photos/Graduation/5.jpg" alt=""></a>
                 <p><a href = 'graduation.html'>Graduation</a></p>
-            </div>
-            <br>    
+            </div>   
             <div class='Albumicon'>
                 <a href='muddled.html'><img src="./Photos/Muddled/7.jpg" alt=""></a>
                 <p><a href = 'muddled.html'>Muddled</a></p>
+            </div>
+            <div class='Albumicon'>
+                <a href='Roots.html'><img src="./Photos/Roots/0.jpg" alt=""></a>
+                <p><a href = 'Roots.html'>Roots</a></p>
+            </div>
+            <div class='Albumicon'>
+                <a href='Oime.html'><img src="./Photos/Oime/0.jpg" alt=""></a>
+                <p><a href = 'Oime.html'>Oime</a></p>
             </div>
         </section>
     </main>
